crates/ruff_python_trivia_integration_tests/tests/snapshots/simple_tokenizer__comment_containing_single_quoted_string.snap
---
source: crates/ruff_python_trivia_integration_tests/tests/simple_tokenizer.rs
expression: test_case.tokenize_reverse()
snapshot_kind: text
---
[
    SimpleToken {
        kind: Comment,
        range: 17..43,
    },
    SimpleToken {
        kind: Whitespace,
        range: 16..17,
    },
    SimpleToken {
        kind: Other,
        range: 15..16,
    },
    SimpleToken {
        kind: Bogus,
        range: 0..15,
    },
]
