crates/ruff_python_trivia_integration_tests/tests/snapshots/simple_tokenizer__empty_string_literal.snap
---
source: crates/ruff_python_trivia_integration_tests/tests/simple_tokenizer.rs
expression: test_case.tokenize_reverse()
snapshot_kind: text
---
[
    SimpleToken {
        kind: Comment,
        range: 3..16,
    },
    SimpleToken {
        kind: Whitespace,
        range: 2..3,
    },
    SimpleToken {
        kind: Other,
        range: 1..2,
    },
    SimpleToken {
        kind: Bogus,
        range: 0..1,
    },
]
