crates/ruff_python_trivia_integration_tests/tests/snapshots/simple_tokenizer__identifier_ending_in_non_start_char.snap
---
source: crates/ruff_python_trivia_integration_tests/tests/simple_tokenizer.rs
expression: test_case.tokens()
snapshot_kind: text
---
[
    SimpleToken {
        kind: Name,
        range: 0..2,
    },
]
