crates/ruff_python_trivia_integration_tests/tests/snapshots/simple_tokenizer__identifier_starting_with_string_kind.snap
---
source: crates/ruff_python_trivia_integration_tests/tests/simple_tokenizer.rs
expression: test_case.tokens()
snapshot_kind: text
---
[
    SimpleToken {
        kind: Name,
        range: 0..3,
    },
    SimpleToken {
        kind: Whitespace,
        range: 3..4,
    },
    SimpleToken {
        kind: Name,
        range: 4..7,
    },
]
