crates/ruff_python_trivia_integration_tests/tests/snapshots/simple_tokenizer__ignore_word_with_only_id_continuing_chars.snap
---
source: crates/ruff_python_trivia_integration_tests/tests/simple_tokenizer.rs
expression: test_case.tokens()
snapshot_kind: text
---
[
    SimpleToken {
        kind: Other,
        range: 0..1,
    },
    SimpleToken {
        kind: Bogus,
        range: 1..3,
    },
]
