crates/ruff_python_trivia_integration_tests/tests/snapshots/simple_tokenizer__single_quoted_multiline_string_containing_comment.snap
---
source: crates/ruff_python_trivia_integration_tests/tests/simple_tokenizer.rs
expression: test_case.tokenize_reverse()
snapshot_kind: text
---
[
    SimpleToken {
        kind: Other,
        range: 76..77,
    },
    SimpleToken {
        kind: Bogus,
        range: 0..76,
    },
]
