crates/ruff_python_trivia_integration_tests/tests/snapshots/simple_tokenizer__single_quoted_multiline_string_implicit_concatenation.snap
---
source: crates/ruff_python_trivia_integration_tests/tests/simple_tokenizer.rs
expression: test_case.tokenize_reverse()
snapshot_kind: text
---
[
    SimpleToken {
        kind: Other,
        range: 78..79,
    },
    SimpleToken {
        kind: Bogus,
        range: 0..78,
    },
]
