crates/ruff_python_trivia_integration_tests/tests/snapshots/simple_tokenizer__string_with_byte_kind.snap
---
source: crates/ruff_python_trivia_integration_tests/tests/simple_tokenizer.rs
expression: test_case.tokens()
snapshot_kind: text
---
[
    SimpleToken {
        kind: Other,
        range: 0..2,
    },
    SimpleToken {
        kind: Bogus,
        range: 2..7,
    },
]
